# PixelSandCompute

./: .gitignore  .gitmodules  CMakeLists.txt  CompileShaders.ps1  README.md  main.cpp
Shaders/: FillTexture.comp.hlsl  TexturedQuad.frag.hlsl
Shaders/Compiled/DXIL/: FillTexture.comp.dxil  TexturedQuad.frag.dxil
Shaders/Compiled/MSL/: FillTexture.comp.msl  TexturedQuad.frag.msl
Shaders/Compiled/SPIRV/: FillTexture.comp.spv  TexturedQuad.frag.spv
